test/corpus/parentheses.txt
=================
empty parentheses
=================

()

---

(source_file
  (statement
    (expression
      (parentheses))))

==============
empty brackets
==============

[]

---

(source_file
  (statement
    (expression
      (parentheses))))

============
empty braces
============

{}

---

(source_file
  (statement
    (expression
      (parentheses))))

=====================
empty angled brackets
=====================

<||>

---

(source_file
  (statement
    (expression
      (parentheses))))

===========
parentheses
===========

(x)

---

(source_file
  (statement
    (expression
      (parentheses
        (expression
          (token
            (identifier)))))))

========
brackets
========

[x]

---

(source_file
  (statement
    (expression
      (parentheses
        (expression
          (token
            (identifier)))))))

======
braces
======

{x}

---

(source_file
  (statement
    (expression
      (parentheses
        (expression
          (token
            (identifier)))))))

===============
angled brackets
===============

<|x|>

---

(source_file
  (statement
    (expression
      (parentheses
        (expression
          (token
            (identifier)))))))

====================
semicolon sequences
====================

(foo;)
(foo; bar)
(foo; bar;)

---

(source_file
  (statement
    (expression
      (parentheses
        contents: (semicolon_sequence
          (expression
            (token
              (identifier)))))))
  (statement
    (expression
      (parentheses
        contents: (semicolon_sequence
          (expression
            (token
              (identifier)))
          (expression
            (token
              (identifier)))))))
  (statement
    (expression
      (parentheses
        contents: (semicolon_sequence
          (expression
            (token
              (identifier)))
          (expression
            (token
              (identifier))))))))
