test/corpus/postfix.txt
=========
factorial
=========

x!

---

(source_file
  (statement
    (expression
      (postfix
        (expression
          (token
            (identifier)))))))

=============
sum of twists
=============

x(*)

---

(source_file
  (statement
    (expression
      (postfix
        (expression
          (token
            (identifier)))))))

============
upper shriek
============

x^!

---

(source_file
  (statement
    (expression
      (postfix
        (expression
          (token
            (identifier)))))))

========
pullback
========

x^*

---

(source_file
  (statement
    (expression
      (postfix
        (expression
          (token
            (identifier)))))))

==============
sheafification
==============

x^~

---

(source_file
  (statement
    (expression
      (postfix
        (expression
          (token
            (identifier)))))))

============
lower shriek
============

x_!

---

(source_file
  (statement
    (expression
      (postfix
        (expression
          (token
            (identifier)))))))

===========
pushforward
===========

x_*

---

(source_file
  (statement
    (expression
      (postfix
        (expression
          (token
            (identifier)))))))

===============
subscript-tilde
===============

x_~

---

(source_file
  (statement
    (expression
      (postfix
        (expression
          (token
            (identifier)))))))


========================
postfix w/ strong binary
========================

x.y_*

---

(source_file
  (statement
    (expression
      (postfix
        (expression
          (strong_binary
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier)))))))))

======================
postfix w/ weak binary
======================

x + y!

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (postfix
            (expression
              (token
                (identifier)))))))))
