test/corpus/quote.txt
======
symbol
======

symbol x

---

(source_file
  (statement
    (expression
      (quote
        (identifier)))))

======
global
======

global x

---

(source_file
  (statement
    (expression
      (quote
        (identifier)))))

=====
local
=====

local x

---

(source_file
  (statement
    (expression
      (quote
        (identifier)))))

===========
threadLocal
===========

threadLocal x

---

(source_file
  (statement
    (expression
      (quote
        (identifier)))))

==============
threadVariable
==============

threadVariable x

---

(source_file
  (statement
    (expression
      (quote
        (identifier)))))
