test/corpus/token.txt
==========
identifier
==========

monomialCurveIdeal

---

(source_file
  (statement
    (expression
      (token
        (identifier)))))

======
string
======

"Hello, world!"

---

(source_file
  (statement
    (expression
      (token
        (string)))))

========================
string w/ escaped quotes
========================

"String with \"escaped\" quotes"

---

(source_file
  (statement
    (expression
      (token
        (string)))))

==================
string w/ newlines
==================

"foo
bar

baz"

---

(source_file
  (statement
    (expression
      (token
        (string)))))

=======================
slash-delineated string
=======================

///
foo
bar
baz
///

---

(source_file
  (statement
    (expression
      (token
        (string)))))

=============================
empty slash-delineated string
=============================

//////

---

(source_file
  (statement
    (expression
      (token
        (string)))))

===============
decimal integer
===============

9876543210

---

(source_file
  (statement
    (expression
      (token
        (integer)))))

===================
binary integer (0b)
===================

0b010101010101

---

(source_file
  (statement
    (expression
      (token
        (integer)))))

===================
binary integer (0B)
===================

0B010101010101

---

(source_file
  (statement
    (expression
      (token
        (integer)))))

==================
octal integer (0o)
==================

0o76543210

---

(source_file
  (statement
    (expression
      (token
        (integer)))))

==================
octal integer (0O)
==================

0O76543210

---

(source_file
  (statement
    (expression
      (token
        (integer)))))

========================
hexadecimal integer (0x)
========================

0xfedcba9876543210

---

(source_file
  (statement
    (expression
      (token
        (integer)))))

========================
hexadecimal integer (0X)
========================

0XFEDBCA9876543210

---

(source_file
  (statement
    (expression
      (token
        (integer)))))

==============
floating point
==============

1p53
1e10
1.0
1.0p53
.25
.25e-3
123.45p53E+10

---

(source_file
  (statement
    (expression
      (token
        (float))))
  (statement
    (expression
      (token
        (float))))
  (statement
    (expression
      (token
        (float))))
  (statement
    (expression
      (token
        (float))))
  (statement
    (expression
      (token
        (float))))
  (statement
    (expression
      (token
        (float))))
  (statement
    (expression
      (token
        (float)))))
