test/corpus/unary.txt
===========
unary sharp
===========

#x

---

(source_file
  (statement
    (expression
      (unary
        (unary_binary
          (expression
            (token
              (identifier))))))))

==========
unary star
==========

*x

---

(source_file
  (statement
    (expression
      (unary
        (unary_binary
          (expression
            (token
              (identifier))))))))

==========
unary plus
==========

+x

---

(source_file
  (statement
    (expression
      (unary
        (unary_binary
          (expression
            (token
              (identifier))))))))

===========
unary comma
===========

,x

---

(source_file
  (statement
    (expression
      (unary
        (unary_binary
          (expression
            (token
              (identifier))))))))

===========
unary minus
===========

-x

---

(source_file
  (statement
    (expression
      (unary
        (unary_binary
          (expression
            (token
              (identifier))))))))

==========
unary less
==========

<x

---

(source_file
  (statement
    (expression
      (unary
        (unary_binary
          (expression
            (token
              (identifier))))))))

===============
unary less-less
===============

<<x

---

(source_file
  (statement
    (expression
      (unary
        (unary_binary
          (expression
            (token
              (identifier))))))))

================
unary less-equal
================

<=x

---

(source_file
  (statement
    (expression
      (unary
        (unary_binary
          (expression
            (token
              (identifier))))))))

============================
unary long-double-left-arrow
============================

<==x

---

(source_file
  (statement
    (expression
      (unary
        (unary_binary
          (expression
            (token
              (identifier))))))))

=================================
unary long-long-double-left-arrow
=================================

<===x

---

(source_file
  (statement
    (expression
      (unary
        (unary_binary
          (expression
            (token
              (identifier))))))))

============
unary greater
============

>x

---

(source_file
  (statement
    (expression
      (unary
        (unary_binary
          (expression
            (token
              (identifier))))))))

=====================
unary greater-equal
=====================

>=x

---

(source_file
  (statement
    (expression
      (unary
        (unary_binary
          (expression
            (token
              (identifier))))))))

==============
unary question
==============

?x

---

(source_file
  (statement
    (expression
      (unary
        (unary_binary
          (expression
            (token
              (identifier))))))))

=======================
unary question-question
=======================

??x

---

(source_file
  (statement
    (expression
      (unary
        (unary_binary
          (expression
            (token
              (identifier))))))))

===============
unary deduction
===============

|-x

---

(source_file
  (statement
    (expression
      (unary
        (unary_binary
          (expression
            (token
              (identifier))))))))

==============================
unary tilde (bitwise negation)
==============================

~x

---

(source_file
  (statement
    (expression
      (unary
        (unary_binary
          (expression
            (token
              (identifier))))))))

=====
break
=====

break x

---

(source_file
  (statement
    (expression
      (unary
        (unary_only
          (expression
            (token
              (identifier))))))))

==========
breakpoint
==========

breakpoint x

---

(source_file
  (statement
    (expression
      (unary
        (unary_only
          (expression
            (token
              (identifier))))))))

========
continue
========

continue x

---

(source_file
  (statement
    (expression
      (unary
        (unary_only
          (expression
            (token
              (identifier))))))))

===========
elapsedTime
===========

elapsedTime x

---

(source_file
  (statement
    (expression
      (unary
        (unary_only
          (expression
            (token
              (identifier))))))))

=============
elapsedTiming
=============

elapsedTiming x

---

(source_file
  (statement
    (expression
      (unary
        (unary_only
          (expression
            (token
              (identifier))))))))

===
not
===

not x

---

(source_file
  (statement
    (expression
      (unary
        (unary_only
          (expression
            (token
              (identifier))))))))

=======
profile
=======

profile x

---

(source_file
  (statement
    (expression
      (unary
        (unary_only
          (expression
            (token
              (identifier))))))))

======
return
======

return x

---

(source_file
  (statement
    (expression
      (unary
        (unary_only
          (expression
            (token
              (identifier))))))))

======
shield
======

shield x

---

(source_file
  (statement
    (expression
      (unary
        (unary_only
          (expression
            (token
              (identifier))))))))

====
step
====

step x

---

(source_file
  (statement
    (expression
      (unary
        (unary_only
          (expression
            (token
              (identifier))))))))

====
TEST
====

TEST x

---

(source_file
  (statement
    (expression
      (unary
        (unary_only
          (expression
            (token
              (identifier))))))))

=====
throw
=====

throw x

---

(source_file
  (statement
    (expression
      (unary
        (unary_only
          (expression
            (token
              (identifier))))))))

====
time
====

time x

---

(source_file
  (statement
    (expression
      (unary
        (unary_only
          (expression
            (token
              (identifier))))))))

======
timing
======

timing x

---

(source_file
  (statement
    (expression
      (unary
        (unary_only
          (expression
            (token
              (identifier))))))))

====
trap
====

trap x

---

(source_file
  (statement
    (expression
      (unary
        (unary_only
          (expression
            (token
              (identifier))))))))

=====
catch
=====

catch x

---

(source_file
  (statement
    (expression
      (unary
        (unary_only
          (expression
            (token
              (identifier))))))))
