test/corpus/while.txt
========
while-do
========

while x do y

---

(source_file
  (statement
    (expression
      (while
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

==========
while-list
==========

while x list y

---

(source_file
  (statement
    (expression
      (while
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=============
while-list-do
=============

while x list y do z

---

(source_file
  (statement
    (expression
      (while
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===========
dangling do
===========

while while x list y do z do w

---

(source_file
  (statement
    (expression
      (while
        (expression
          (while
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier)))))
        (expression
          (token
            (identifier)))))))
